# PCBInsight-AI

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  SKILLS_LOG.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py
backend/app/ai/: __init__.py  review.py  summarizer.py
backend/app/analysis/: __init__.py  decoupling.py  differential_pairs.py  ground.py  manufacturability.py  placement.py  power.py  routing.py  scoring.py  signal_integrity.py  thermal.py  util.py
backend/app/db/: __init__.py
backend/app/models/: board.py  issue.py
backend/app/parser/: kicad_project.py  sexpr.py
backend/app/reports/: __init__.py  html_report.py  pdf_report.py  theme.py
backend/scripts/: generate_try_it_demo.py  validate_ai.py
backend/tests/: factories.py  test_analysis_decoupling.py  test_analysis_differential_pairs.py  test_analysis_ground.py  test_analysis_manufacturability.py  test_analysis_placement.py  test_analysis_power.py  test_analysis_routing.py  test_analysis_signal_integrity.py  test_analysis_thermal.py  test_api.py  test_cli.py  test_html_report.py  test_parser.py  test_review.py  test_scoring.py
docs/: ARCHITECTURE.md  ENGINEERING_DECISIONS.md  PHASE0_NOTES.md  VALIDATION.md  design-system.md  example_report.html  index.html  try-it-demo.html
eda_playground/: design.sv  testbench.sv
examples/: README.md
frontend/: index.html  package-lock.json  package.json
reports/: ai_validation.json  ai_validation.md
rtl/: p_controller.sv  pwm_generator.sv  single_joint_controller.sv  spi_adc_reader.sv
(+37 files in other folders)
